<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controller.transaksiSukses">

    <ImageView
        android:id="@+id/gambar2"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/productBuyInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/transaction_success" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/nama2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/item_name" />


    <TextView
        android:id="@+id/deskripsi3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/price_rp_5000" />

    <TextView
        android:id="@+id/productBuyChangeMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:text="@string/change_money" />

    <TextView
        android:id="@+id/productBuyChangeMoneyInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder" />
</LinearLayout>