<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.About">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/text_about"
        android:paddingTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:text="@string/about"
        android:textSize= "30sp"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/fotoku"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/me"
        android:layout_below="@+id/text_about"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/desc_about"
        android:layout_width="74dp"
        android:layout_height="88dp"
        android:layout_below="@+id/fotoku"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp"
        android:text="@string/arifin" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:layout_below="@+id/fotoku"
        android:layout_centerHorizontal="true"
        android:paddingTop="60dp"
        android:text="@string/email" />

    <LinearLayout
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:id="@+id/LL"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/pesanDesc"
            android:layout_width="match_parent"
            android:maxWidth="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </LinearLayout>

    </RelativeLayout>
</ScrollView>